--- a/JS01/TG01_2341720158_RafiRajendra.ipynb
+++ b/JS01/TG01_2341720158_RafiRajendra.ipynb
@@ -2,23 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "63159629",
+   "execution_count": 2,
+   "id": "e63d3650",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting PyPREP\n",
-      "  Downloading pyprep-0.5.0-py3-none-any.whl.metadata (7.3 kB)\n",
+      "Requirement already satisfied: PyPREP in c:\\users\\rafir\\anaconda3\\lib\\site-packages (0.5.0)\n",
       "Requirement already satisfied: scipy in c:\\users\\rafir\\anaconda3\\lib\\site-packages (1.15.3)\n",
-      "Collecting wandb\n",
-      "  Downloading wandb-0.21.3-py3-none-win_amd64.whl.metadata (10 kB)\n",
-      "Collecting pyECG\n",
-      "  Downloading pyECG-0.0.9.1-py2.py3-none-any.whl.metadata (3.1 kB)\n",
-      "Collecting mne>=1.3.0 (from PyPREP)\n",
-      "  Downloading mne-1.10.1-py3-none-any.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: wandb in c:\\users\\rafir\\anaconda3\\lib\\site-packages (0.21.3)\n",
+      "Requirement already satisfied: pyECG in c:\\users\\rafir\\anaconda3\\lib\\site-packages (0.0.9.1)\n",
+      "Requirement already satisfied: mne>=1.3.0 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from PyPREP) (1.10.1)\n",
       "Requirement already satisfied: numpy>=1.20.2 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from PyPREP) (2.1.3)\n",
       "Requirement already satisfied: psutil>=5.4.3 in c:\\users\\rafir\\appdata\\roaming\\python\\python313\\site-packages (from PyPREP) (7.0.0)\n",
       "Requirement already satisfied: click>=8.0.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from wandb) (8.1.8)\n",
@@ -37,64 +33,40 @@
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from requests<3,>=2.0.0->wandb) (3.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from requests<3,>=2.0.0->wandb) (2.3.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from requests<3,>=2.0.0->wandb) (2025.8.3)\n",
-      "Collecting ishneholterlib==2017.4.11 (from pyECG)\n",
-      "  Downloading ishneholterlib-2017.4.11.tar.gz (7.0 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Collecting wfdb==2.2.1 (from pyECG)\n",
-      "  Downloading wfdb-2.2.1.tar.gz (94 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Requirement already satisfied: ishneholterlib==2017.4.11 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pyECG) (2017.4.11)\n",
+      "Requirement already satisfied: wfdb==2.2.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pyECG) (2.2.1)\n",
       "Requirement already satisfied: pytest in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pyECG) (8.3.4)\n",
-      "Collecting pytest-cov (from pyECG)\n",
-      "  Downloading pytest_cov-6.2.1-py3-none-any.whl.metadata (30 kB)\n",
-      "Collecting PyCRC (from ishneholterlib==2017.4.11->pyECG)\n",
-      "  Downloading pycrc-0.11.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Collecting nose>=1.3.7 (from wfdb==2.2.1->pyECG)\n",
-      "  Downloading nose-1.3.7-py3-none-any.whl.metadata (1.7 kB)\n",
+      "Requirement already satisfied: pytest-cov in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pyECG) (6.2.1)\n",
+      "Requirement already satisfied: PyCRC in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from ishneholterlib==2017.4.11->pyECG) (0.11.0)\n",
+      "Requirement already satisfied: nose>=1.3.7 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from wfdb==2.2.1->pyECG) (1.3.7)\n",
       "Requirement already satisfied: matplotlib>=1.5.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from wfdb==2.2.1->pyECG) (3.10.0)\n",
       "Requirement already satisfied: pandas>=0.19.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from wfdb==2.2.1->pyECG) (2.2.3)\n",
-      "Collecting sklearn>=0.0 (from wfdb==2.2.1->pyECG)\n",
-      "  Downloading sklearn-0.0.post12.tar.gz (2.6 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'error'\n",
+      "Requirement already satisfied: sklearn>=0.0 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from wfdb==2.2.1->pyECG) (0.0.post12)\n",
+      "Requirement already satisfied: colorama in c:\\users\\rafir\\appdata\\roaming\\python\\python313\\site-packages (from click>=8.0.1->wandb) (0.4.6)\n",
+      "Requirement already satisfied: gitdb<5,>=4.0.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from gitpython!=3.1.29,>=1.0.0->wandb) (4.0.7)\n",
+      "Requirement already satisfied: smmap<5,>=3.0.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.29,>=1.0.0->wandb) (4.0.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (1.4.8)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (11.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (2.9.0.post0)\n",
+      "Requirement already satisfied: decorator in c:\\users\\rafir\\appdata\\roaming\\python\\python313\\site-packages (from mne>=1.3.0->PyPREP) (5.2.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from mne>=1.3.0->PyPREP) (3.1.6)\n",
+      "Requirement already satisfied: lazy-loader>=0.3 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from mne>=1.3.0->PyPREP) (0.4)\n",
+      "Requirement already satisfied: pooch>=1.5 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from mne>=1.3.0->PyPREP) (1.8.2)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from mne>=1.3.0->PyPREP) (4.67.1)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pandas>=0.19.1->wfdb==2.2.1->pyECG) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pandas>=0.19.1->wfdb==2.2.1->pyECG) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=1.5.1->wfdb==2.2.1->pyECG) (1.17.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from jinja2->mne>=1.3.0->PyPREP) (3.0.2)\n",
+      "Requirement already satisfied: importlib-metadata>=4.0 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from PyCRC->ishneholterlib==2017.4.11->pyECG) (8.5.0)\n",
+      "Requirement already satisfied: zipp>=3.20 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from importlib-metadata>=4.0->PyCRC->ishneholterlib==2017.4.11->pyECG) (3.21.0)\n",
+      "Requirement already satisfied: iniconfig in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pytest->pyECG) (1.1.1)\n",
+      "Requirement already satisfied: pluggy<2,>=1.5 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from pytest->pyECG) (1.5.0)\n",
+      "Requirement already satisfied: coverage>=7.5 in c:\\users\\rafir\\anaconda3\\lib\\site-packages (from coverage[toml]>=7.5->pytest-cov->pyECG) (7.10.6)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  error: subprocess-exited-with-error\n",
-      "  \n",
-      "  × python setup.py egg_info did not run successfully.\n",
-      "  │ exit code: 1\n",
-      "  ╰─> [15 lines of output]\n",
-      "      The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
-      "      rather than 'sklearn' for pip commands.\n",
-      "      \n",
-      "      Here is how to fix this error in the main use cases:\n",
-      "      - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
-      "      - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
-      "        (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
-      "      - if the 'sklearn' package is used by one of your dependencies,\n",
-      "        it would be great if you take some time to track which package uses\n",
-      "        'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
-      "      - as a last resort, set the environment variable\n",
-      "        SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
-      "      \n",
-      "      More information is available at\n",
-      "      https://github.com/scikit-learn/sklearn-pypi-package\n",
-      "      [end of output]\n",
-      "  \n",
-      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "error: metadata-generation-failed\n",
-      "\n",
-      "× Encountered error while generating package metadata.\n",
-      "╰─> See above for output.\n",
-      "\n",
-      "note: This is an issue with the package mentioned above, not pip.\n",
-      "hint: See above for details.\n"
      ]
     }
    ],
@@ -104,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c86e1d",
+   "id": "57b4b43d",
    "metadata": {},
    "source": [
     "## Bagian 1"
@@ -112,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "322432cb",
+   "id": "753ca120",
    "metadata": {},
    "source": [
     "Kegunakan masing-masing library:\n",
@@ -124,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c438aa",
+   "id": "96f0914e",
    "metadata": {},
    "source": [
     "## Bagian 2"
@@ -132,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd944d0",
+   "id": "1a281ecd",
    "metadata": {},
    "source": [
     "1. Berikan contoh tentang tidakan melanggar etika dan hukum tentang penggunaan kecerdasan buatan. Sertakan referensi yang digunakan.\n",
