--- a/JS02/src/tugas-praktikum.ipynb
+++ b/JS02/src/tugas-praktikum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "24c70d2f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "5e928530",
    "metadata": {},
    "outputs": [
@@ -227,13 +227,13 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dpath = 'data/wbc.csv'\n",
+    "dpath = '../data/wbc.csv'\n",
     "df = pd.read_csv(dpath)\n",
     "df.head()"
    ]
