--- a/JS03/src/praktikum2.ipynb
+++ b/JS03/src/praktikum2.ipynb
@@ -13,7 +13,7 @@
    "id": "933e3695",
    "metadata": {},
    "source": [
-    "### Langkah 0 - Siapkan Corpus"
+    "### Langkah 0 - Load Library"
    ]
   },
   {
@@ -23,13 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = [\n",
-    "    'the house had a tiny little mouse',\n",
-    "    'the cat saw the mouse',\n",
-    "    'the mouse ran away from the house',\n",
-    "    'the cat finally ate the mouse',\n",
-    "    'the end of the mouse story'\n",
-    "]"
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler"
    ]
   },
   {
@@ -37,7 +32,7 @@
    "id": "c6a814f7",
    "metadata": {},
    "source": [
-    "### Langkah 1 - Buat Model TF-IDF"
+    "### Langkah 1 - Load Data"
    ]
   },
   {
@@ -47,44 +42,152 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
-      "\twith 18 stored elements and shape (5, 12)>\n",
-      "  Coords\tValues\n",
-      "  (0, 5)\t0.47557510189256375\n",
-      "  (0, 11)\t0.5894630806320427\n",
-      "  (0, 6)\t0.5894630806320427\n",
-      "  (0, 7)\t0.2808823162882302\n",
-      "  (1, 7)\t0.3477147117091919\n",
-      "  (1, 2)\t0.5887321837696324\n",
-      "  (1, 9)\t0.7297183669435993\n",
-      "  (2, 5)\t0.47557510189256375\n",
-      "  (2, 7)\t0.2808823162882302\n",
-      "  (2, 8)\t0.5894630806320427\n",
-      "  (2, 1)\t0.5894630806320427\n",
-      "  (3, 7)\t0.2808823162882302\n",
-      "  (3, 2)\t0.47557510189256375\n",
-      "  (3, 4)\t0.5894630806320427\n",
-      "  (3, 0)\t0.5894630806320427\n",
-      "  (4, 7)\t0.3193023297639811\n",
-      "  (4, 3)\t0.6700917930430479\n",
-      "  (4, 10)\t0.6700917930430479\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>DECK</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>DECK</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>DECK</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500  DECK        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250  DECK        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500  DECK        S  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "# Inisiasi obyek TFidfVectorizer\n",
-    "vect = TfidfVectorizer(stop_words='english')\n",
-    "\n",
-    "# Pembobotan TF-IDF\n",
-    "resp = vect.fit_transform(corpus)\n",
-    "\n",
-    "# Cetak hasil\n",
-    "print(resp)"
+    "dpath = '../data/Titanic-Dataset-fixed.csv'\n",
+    "df = pd.read_csv(dpath)\n",
+    "df.head()"
    ]
   },
   {
@@ -92,7 +195,7 @@
    "id": "99b673c0",
    "metadata": {},
    "source": [
-    "### Langkah 2 - Cek Kata yang Digunakan"
+    "### Langkah 2 - Pre Processing Encoding Sex"
    ]
   },
   {
@@ -105,13 +208,428 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ate' 'away' 'cat' 'end' 'finally' 'house' 'little' 'mouse' 'ran' 'saw'\n",
-      " 'story' 'tiny']\n"
+      "=== Hasil Setelah Encoding 'Sex' ===\n",
+      "   Sex\n",
+      "0    1\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "4    1 \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(vect.get_feature_names_out())"
+    "# --- 2. Encoding fitur 'Sex' ---\n",
+    "df['Sex'] = df['Sex'].map({'male': 1, 'female': 0})\n",
+    "print(\"=== Hasil Setelah Encoding 'Sex' ===\")\n",
+    "print(df[['Sex']].head(), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "036b5530",
+   "metadata": {},
+   "source": [
+    "### Langkah 3- Pre Processing Encoding \"Cabin\". "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eaa9c068",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Hasil Setelah Fill NaN pada 'Cabin' ===\n",
+      "  Cabin\n",
+      "0  DECK\n",
+      "1   C85\n",
+      "2  DECK\n",
+      "3  C123\n",
+      "4  DECK \n",
+      "\n",
+      "=== Hasil Ambil huruf pertama 'Cabin' (Deck) ===\n",
+      "  Cabin\n",
+      "0     D\n",
+      "1     C\n",
+      "2     D\n",
+      "3     C\n",
+      "4     D \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- 3. Encoding fitur 'Cabin' ---\n",
+    "df['Cabin'] = df['Cabin'].fillna('Unknown')\n",
+    "print(\"=== Hasil Setelah Fill NaN pada 'Cabin' ===\")\n",
+    "print(df[['Cabin']].head(5), \"\\n\")\n",
+    "df['Cabin'] = df['Cabin'].apply(lambda x: x[0] if x != 'Unknown' else 'U')\n",
+    "print(\"=== Hasil Ambil huruf pertama 'Cabin' (Deck) ===\")\n",
+    "print(df[['Cabin']].head(5), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e75575e2",
+   "metadata": {},
+   "source": [
+    "### Langkah 4 - Pre Processing Imputasi Data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a31ccfdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Hasil Setelah Imputasi Data pada Usia dengan median ===\n",
+      "         Age\n",
+      "0  22.000000\n",
+      "1  38.000000\n",
+      "2  26.000000\n",
+      "3  35.000000\n",
+      "4  35.000000\n",
+      "5  29.699118\n",
+      "6  54.000000\n",
+      "7   2.000000\n",
+      "8  27.000000\n",
+      "9  14.000000 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- 4. Standarisasi fitur 'Age' ---\n",
+    "df['Age'] = df[['Age']].fillna(df['Age'].median())\n",
+    "print(\"=== Hasil Setelah Imputasi Data pada Usia dengan median ===\")\n",
+    "print(df[['Age']].head(10), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0940ce4e",
+   "metadata": {},
+   "source": [
+    "### Langkah 5 - Pre Processing Standarisasi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fc9d3ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Hasil Setelah Standardisasi 'Age' ===\n",
+      "        Age\n",
+      "0 -0.592481\n",
+      "1  0.638789\n",
+      "2 -0.284663\n",
+      "3  0.407926\n",
+      "4  0.407926\n",
+      "5  0.000000\n",
+      "6  1.870059\n",
+      "7 -2.131568\n",
+      "8 -0.207709\n",
+      "9 -1.208115 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "df['Age'] = scaler.fit_transform(df[['Age']])\n",
+    "print(\"=== Hasil Setelah Standardisasi 'Age' ===\")\n",
+    "print(df[['Age']].head(10), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "194468b5",
+   "metadata": {},
+   "source": [
+    "### Langkah 6 - Hasil setelah Pre Processing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dd1011f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Hasil Preprocessing (5 baris pertama) ===\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.592481</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>D</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.638789</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.284663</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>D</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.407926</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.407926</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>D</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name  Sex       Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    1 -0.592481      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...    0  0.638789      1   \n",
+       "2                             Heikkinen, Miss. Laina    0 -0.284663      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)    0  0.407926      1   \n",
+       "4                           Allen, Mr. William Henry    1  0.407926      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500     D        S  \n",
+       "1      0          PC 17599  71.2833     C        C  \n",
+       "2      0  STON/O2. 3101282   7.9250     D        S  \n",
+       "3      0            113803  53.1000     C        S  \n",
+       "4      0            373450   8.0500     D        S  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# --- 5. Cek hasil akhir ---\n",
+    "print(\"=== Hasil Preprocessing (5 baris pertama) ===\")\n",
+    "#print(df[['Sex', 'Cabin', 'Age']].head(5))\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f12309e",
+   "metadata": {},
+   "source": [
+    "### Langkah 7 - Seleksi Fitur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "53f933c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Cabin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.592481</td>\n",
+       "      <td>1</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.638789</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.284663</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.407926</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.407926</td>\n",
+       "      <td>1</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Survived  Pclass       Age  Sex Cabin\n",
+       "0         0       3 -0.592481    1     D\n",
+       "1         1       1  0.638789    0     C\n",
+       "2         1       3 -0.284663    0     D\n",
+       "3         1       1  0.407926    0     C\n",
+       "4         0       3  0.407926    1     D"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[['Survived', 'Pclass', 'Age', 'Sex', 'Cabin']]\n",
+    "df.head()"
    ]
   }
  ],
